@@ -30,6 +30,7 @@ New features:
       CTRL+\         Go to the root directory
       CTRL+`         Go to the home directory
       CTRL+5         Create MD5 (128-bit) checksum
+      CTRL+SHIFT+C   Copy selected file names to clipboard
 
 
 ===================================
